Started adding in Auth functionality

--- a/angular.json
+++ b/angular.json
@@ -96,7 +96,7 @@
       }
     },
     "todo-app-e2e": {
-      "root": "",
+      "root": "e2e/",
       "sourceRoot": "e2e",
       "projectType": "application",
       "architect": {
