--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^7.1.2",
     "@angular/platform-browser-dynamic": "^7.1.2",
     "@angular/router": "^7.1.2",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-amplify": "^1.1.12",
     "core-js": "^2.4.1",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.0.0-rc.0",
@@ -28,10 +30,11 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/cli": "^7.1.2",
     "@angular/compiler-cli": "^7.1.2",
     "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
+    "@types/node": "^10.12.12",
     "codelyzer": "^4.3.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
@@ -47,7 +50,6 @@
     "todomvc-common": "^1.0.3",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~3.1.6",
-    "@angular-devkit/build-angular": "~0.11.0"
+    "typescript": "~3.1.6"
   }
 }
